Optimizacion de nombres clean code